add deposit, withdraw, transfer logic
