# internal/gateway/api/http/accounts.go
@@ -1,7 +1,6 @@
 package app
 
 import (
-	"encoding/json"
 	"fmt"
 	"net/http"
 
@@ -11,7 +10,6 @@ import (
 	"github.com/SlayerSv/payments/internal/shared/errs"
 	transmodels "github.com/SlayerSv/payments/internal/trans/models"
 	walletmodels "github.com/SlayerSv/payments/internal/wallet/models"
-	"google.golang.org/protobuf/types/known/emptypb"
 )
 
 type AccountID struct {
@@ -29,13 +27,17 @@ type History struct {
 // @Security     BearerAuth
 // @Accept       json
 // @Produce      json
-// @Param        id  path string true "Account ID"
-// @Success      200  {object}  models.AccountResponse
+// @Param        account_id  path string true "Account ID"
+// @Success      200  {object}  walletmodels.AccountResponse
 // @Failure      400  {object}  errs.Response "Bad Request"
 // @Router       /me/accounts/{account_id} [get]
 func (app *App) GetAccount(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	accID, err := app.ExtractPathValue(r, "account_id")
+	if err != nil {
+		app.ErrorJSON(w, r, fmt.Errorf("%w: error extracting account id from path: %w", errs.BadRequest, err))
+		return
+	}
 	resp, err := app.Clients.Wallet.Get(ctx, &walletpb.GetRequest{Id: accID})
 	if err != nil {
 		app.ErrorJSON(w, r, fmt.Errorf("%w: error getting account: %w", errs.Internal, err))
@@ -52,7 +54,7 @@ func (app *App) GetAccount(w http.ResponseWriter, r *http.Request) {
 // @Security     BearerAuth
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  models.AccountsResponse
+// @Success      200  {object}  walletmodels.AccountsResponse
 // @Failure      400  {object}  errs.Response "Bad Request"
 // @Router       /me/accounts [get]
 func (app *App) GetAllAccounts(w http.ResponseWriter, r *http.Request) {
@@ -97,19 +99,18 @@ func (app *App) CreateAccount(w http.ResponseWriter, r *http.Request) {
 // @Security     BearerAuth
 // @Accept       json
 // @Produce      json
-// @Param        id  path string true "Account ID"
+// @Param        account_id  path string true "Account ID"
 // @Success      204
 // @Failure      400  {object}  errs.Response "Bad Request"
-// @Router       /me/accounts [delete]
+// @Router       /me/accounts/{account_id} [delete]
 func (app *App) DeleteAccount(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
-	req := AccountID{}
-	err := json.NewDecoder(r.Body).Decode(&req)
+	accID, err := app.ExtractPathValue(r, "account_id")
 	if err != nil {
-		app.ErrorJSON(w, r, fmt.Errorf("%w: error decoding request: %w", errs.BadRequest, err))
+		app.ErrorJSON(w, r, fmt.Errorf("%w: missing id: %w", errs.BadRequest, err))
 		return
 	}
-	_, err = app.Clients.Wallet.Delete(ctx, &walletpb.DeleteRequest{Id: req.ID})
+	_, err = app.Clients.Wallet.Delete(ctx, &walletpb.DeleteRequest{Id: accID})
 	if err != nil {
 		app.ErrorJSON(w, r, fmt.Errorf("%w: error deleting account: %w", errs.Internal, err))
 		return
@@ -117,9 +118,25 @@ func (app *App) DeleteAccount(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(204)
 }
 
+// GetTransactionHistory Gets history of transactions of an account
+// @Summary      Gets history of transactions of an account
+// @Description  Gets history of transactions of an account
+// @Tags         transactions
+// @Security     BearerAuth
+// @Accept       json
+// @Produce      json
+// @Param        account_id  path string true "Account ID"
+// @Success      200  {object} History
+// @Failure      400  {object}  errs.Response "Bad Request"
+// @Router       /me/accounts/{account_id}/transactions [get]
 func (app *App) GetTransactionHistory(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
-	history, err := app.Clients.Trans.GetTransactionHistory(ctx, &emptypb.Empty{})
+	accID, err := app.ExtractPathValue(r, "account_id")
+	if err != nil {
+		app.ErrorJSON(w, r, fmt.Errorf("%w: error extracting account id from path: %w", errs.BadRequest, err))
+		return
+	}
+	history, err := app.Clients.Trans.GetTransactionHistory(ctx, &transpb.GetTransactionHistoryRequest{AccountId: accID})
 	if err != nil {
 		app.ErrorJSON(w, r, fmt.Errorf("%w: error getting account history: %w", errs.Internal, err))
 		return
@@ -158,16 +175,20 @@ func pbToAcc(acc *walletpb.Account) walletmodels.AccountResponse {
 }
 
 func pbToTrans(trans *transpb.Transaction, idemail map[string]string) transmodels.TransactionDTO {
-	return transmodels.TransactionDTO{
-		ID:            trans.Id,
-		OpType:        trans.OpType.String(),
-		SenderID:      trans.SenderId,
-		SenderEmail:   idemail[trans.SenderId],
-		SenderType:    trans.SenderType.String(),
-		ReceiverID:    trans.ReceiverId,
-		ReceiverEmail: idemail[trans.ReceiverId],
-		ReceiverType:  trans.ReceiverType.String(),
-		Amount:        trans.Amount,
-		CompletedAt:   trans.CreatedAt.AsTime(),
+	tr := transmodels.TransactionDTO{}
+	tr.ID = trans.Id
+	tr.OpType = trans.OpType.String()
+	tr.Amount = trans.Amount
+	tr.CompletedAt = trans.CreatedAt.AsTime()
+	if trans.OpType == transpb.OperationType_DEPOSIT || trans.OpType == transpb.OperationType_TRANSFER {
+		tr.ReceiverAccountID = trans.ReceiverAccountId
+		racctype := trans.ReceiverAccountType.String()
+		tr.ReceiverAccountType = &racctype
 	}
+	if trans.OpType == transpb.OperationType_WITHDRAW || trans.OpType == transpb.OperationType_TRANSFER {
+		tr.DonorAccountID = trans.DonorAccountId
+		dacctype := trans.DonorAccountType.String()
+		tr.DonorAccountType = &dacctype
+	}
+	return tr
 }
